Initial release v1.0.0: First stable version
- This commit introduces the first stable version of the application (v1.0.0). Includes all core functionalities with a known minor issue in the dud removal system. Further enhancements and bug fixes to follow.